# stat-collector

./: .env  .gitignore  Cargo.toml  Dockerfile  compose.yaml  diesel.toml  docker-compose.yml
.github/workflows/: docker-publish.yml
db/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
db/migrations/2024-01-20-192730_add_periodicity_and_weekday/: down.sql  up.sql
db/migrations/2024-02-03-194808_add_submitted_date/: down.sql  up.sql
django/: Dockerfile  manage.py  requirements.txt
django/StatCollector/: asgi.py  settings.py  urls.py  wsgi.py
django/creator/: admin.py  forms.py  models.py  serializers.py  statcollector_integration.py  urls.py  utils.py  views.py
django/creator/management/commands/: my_superuser.py
django/creator/migrations/: 0001_initial.py  0002_alter_client_options_alter_copy_options_and_more.py  0003_period.py  0004_alter_period_options_alter_period_name.py  0005_remove_statcollector_statcollector_unique_name_insensitive_and_more.py
django/creator/templates/creator/: placement_detail.html  placement_form.html  statcollector_detail.html  statcollector_form.html  statcollector_list.html
django/init_db/: init.sql
django/templates/: base.html
locales/: app.yaml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: db.rs  errors.rs  json.rs  lib.rs  logic.rs  main.rs  routes.rs  schema.rs
src/email_templates/: mod.rs
src/json/: received.rs  sent.rs
src/logic/: email.rs  render_html.rs  scheduler.rs  time.rs
src/routes/: errors.rs  statistics_collector.rs  supplier.rs  util.rs
src/routes/input/: show.rs  submit.rs
src/routes/statistics_collector/: config.rs  create.rs  delete.rs  email.rs  list.rs  show.rs  stats.rs
src/routes/supplier/: show.rs  stats.rs  submit.rs
tests/: test.rs
