[package]
name = "stat-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["form", "macros"] }
axum-extra = "0.9"
anyhow = "1"
deadpool-diesel = { version = "0.5", features = ["postgres"] }
diesel = { version = "2", features = ["postgres", "time", "uuid"] }
diesel-derive-newtype = "2"
diesel_migrations = "2"
derive_more = "0.99.0"
dotenvy = "0.15"
itertools = "0.12"
futures = "0.3"
hyper = { version = "1", features = [] }
maud = { version = "0.26", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "3"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"]}
utoipa = { version = "4", features = ["axum_extras", "time", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
