[package]
name = "stat-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["form", "macros"] }
axum-extra = "0.9"
anyhow = "1"
chrono = {version = "0.4", features = ["clock"] }
deadpool-diesel = { version = "0.5", features = ["postgres"] }
diesel = { version = "2", features = ["postgres", "chrono", "uuid"] }
diesel-derive-newtype = "2"
diesel_migrations = "2"
derive_more = "0.99.0"
dotenvy = "0.15"
itertools = "0.12"
futures = "0.3"
hyper = { version = "1", features = [] }
lettre = { version = "0.11", features = ["serde"] }
maud = { version = "0.26", features = ["axum"] }
mockall = "0.12"
once_cell = "1"
rust-i18n = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = { version = "0.10.0", features = ["signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

[dev-dependencies]
axum-test = "14"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
